--- a/src/templates/_includes/nav.html
+++ b/src/templates/_includes/nav.html
@@ -1,3 +1,5 @@
+{% load i18n %}
+
 <nav class="navbar navbar-default navbar-static-top">
 	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -8,7 +10,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="{% url 'home' %}">Carkinos</a>
+			<a class="navbar-brand" href="{% url 'index' %}">BioCloud</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -28,7 +30,16 @@
 			</ul>
 			<!-- Right Navbar -->
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#">Contact</a></li>
+				{% if user.is_authenticated %}
+					<li><a href="{% url 'user_dashboard' %}">Dashboard</a></li>
+					<form class="navbar-form navbar-right" action="{% url 'logout' %}" method="post">
+						{% csrf_token %}
+						<input type="hidden" name="next" value="{{ logout_next|default:request.path }}">
+						<button type="submit" class="btn btn-logout">{% trans 'Log out' %}</button>
+					</form>
+				{% else %}
+					<li><a href="{% url 'login' %}">Log in</a></li>
+				{% endif %}
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container -->
