--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -24,6 +24,7 @@
 	<div class="container">
 		{% block content %}It works!{% endblock %}
 	</div>
+	{% include '_includes/footer.html' %}
 {% endblock %}
 {% compress js %}
 	{% block js %}
