Reuse registration template, add navbar and footer

--- a/src/templates/registration/password_change_form.html
+++ b/src/templates/registration/password_change_form.html
@@ -1,9 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'registration/base.html' %}
 
 {% load i18n crispy_forms_tags %}
 
-
-{% block main-content %}
+{% block content %}
 <h3 class="dashboard-header">
 	<span class="header-title">{% trans 'Change Log In Password' %}</span>
 </h3>
@@ -17,4 +16,4 @@
 		</button>
 	</div>
 </form>
-{% endblock main-content %}
+{% endblock content %}
