--- a/src/templates/registration/signup.html
+++ b/src/templates/registration/signup.html
@@ -1,33 +1,25 @@
-{% extends 'base.html' %}
+{% extends 'registration/base.html' %}
 
-{% load crispy_forms_tags static %}
-
-{% load i18n handy_helpers %}
+{% load crispy_forms_tags static i18n handy_helpers %}
 
 {% block title %}{% trans 'Sign Up' %}{% endblock title %}
 
-{% block body-class %}registration{% endblock body-class %}
-
 {% block body %}
-<div class="container">
-	<div class="row">
-		<div class="col-md-offset-2 col-md-8">
-			<div class="registration-panel-wrapper">
-				{% for message in messages %}
-				    <div class="alert {{ message|message_bootstrap_class_str }} clearfix" role="alert"><p>{{ message }}</p></div>
-				{% endfor %}
-				<div class="registration-panel">
-					<h2 class="registration-panel__title">{% trans 'Sign Up' %}</h2>
-					{% crispy form %}
-					<p class="text-center">
-						{% url 'login' as login_url %}
-						{% blocktrans trimmed %}
+	<div class="col-md-offset-2 col-md-8">
+		<div class="registration-panel-wrapper">
+			{% for message in messages %}
+				<div class="alert {{ message|message_bootstrap_class_str }} clearfix" role="alert"><p>{{ message }}</p></div>
+			{% endfor %}
+			<div class="registration-panel">
+				<h2 class="registration-panel__title">{% trans 'Sign Up' %}</h2>
+				{% crispy form %}
+				<p class="text-center">
+					{% url 'login' as login_url %}
+					{% blocktrans trimmed %}
 						<span class="form-tip">Already have an account?</span><a href="{{ login_url }}" class="btn btn-link">Login.</a>
-						{% endblocktrans %}
-					</p>
-				</div>
+					{% endblocktrans %}
+				</p>
 			</div>
 		</div>
 	</div>
-</div>
 {% endblock body %}
