--- a/src/templates/registration/login.html
+++ b/src/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'registration/base.html' %}
 
 {% load crispy_forms_tags static %}
 
@@ -6,29 +6,23 @@
 
 {% block title %}{% trans 'Log In' %}{% endblock title %}
 
-{% block body-class %}registration{% endblock body-class %}
-
-{% block body %}
-<div class="container">
-	<div class="row">
-		<div class="col-md-offset-2 col-md-8">
-			<div class="registration-panel-wrapper">
-				{% for message in messages %}
-				    <div class="alert {{ message|message_bootstrap_class_str }} clearfix" role="alert"><p>{{ message }}</p></div>
-				{% endfor %}
-				<div class="registration-panel">
-					<h2 class="registration-panel__title">{% trans 'Log In' %}</h2>
-					{% crispy form %}
-					<p class="text-center">
-						{% url 'signup' as signup_url %}
-						{% blocktrans trimmed %}
+{% block content %}
+	<div class="col-md-offset-2 col-md-8">
+		<div class="registration-panel-wrapper">
+			{% for message in messages %}
+				<div class="alert {{ message|message_bootstrap_class_str }} clearfix" role="alert"><p>{{ message }}</p></div>
+			{% endfor %}
+			<div class="registration-panel">
+				<h2 class="registration-panel__title">{% trans 'Log In' %}</h2>
+				{% crispy form %}
+				<p class="text-center">
+					{% url 'signup' as signup_url %}
+					{% blocktrans trimmed %}
 						<span class="form-tip">Don't have an account?</span>
 						<a class="btn btn-link" href="{{ signup_url }}">Sign up now!</a>
-						{% endblocktrans %}
-					</p>
-				</div>
-		  	</div>
+					{% endblocktrans %}
+				</p>
+			</div>
 		</div>
 	</div>
-</div>
-{% endblock body %}
+{% endblock content %}
