Fix layout: block inheritance

--- a/src/templates/registration/signup.html
+++ b/src/templates/registration/signup.html
@@ -4,7 +4,7 @@
 
 {% block title %}{% trans 'Sign Up' %}{% endblock title %}
 
-{% block body %}
+{% block content %}
 	<div class="col-md-offset-2 col-md-8">
 		<div class="registration-panel-wrapper">
 			{% for message in messages %}
@@ -22,4 +22,4 @@
 			</div>
 		</div>
 	</div>
-{% endblock body %}
+{% endblock content %}
