--- a/src/static/css/site.scss
+++ b/src/static/css/site.scss
@@ -27,6 +27,9 @@
 // @import "mixins";
 
 
+// Import pages
+@import "pages/dashboard";
+
 // Navbar
 .navbar-form {
     margin-right: 0px;
@@ -65,4 +68,3 @@
         margin-bottom: 0px;
     }
 }
-
