--- a/src/static/css/pages/_dashboard.scss
+++ b/src/static/css/pages/_dashboard.scss
@@ -1,7 +1,10 @@
 $dashboard-tab-color: $list-group-link-color;
-$dashboard-tab-hover-color: $list-group-link-hover-color;
 $dashboard-tab-bg: $navbar-default-bg;
+$dashboard-tab-hover-color: $list-group-link-hover-color;
 $dashboard-tab-hover-bg: darken($dashboard-tab-bg, 5%);
+$dashboard-tab-active-color: $list-group-active-color;
+$dashboard-tab-active-bg: $list-group-active-bg;
+
 
 .dashboard {
     // no padding (gutter) width
@@ -33,16 +36,30 @@ $dashboard-tab-hover-bg: darken($dashboard-tab-bg, 5%);
         &:last-child {
 
         }
-
-        &:hover,
-        &:focus {
-            text-decoration: none;
-            color: $dashboard-tab-hover-color;
-            background-color: $dashboard-tab-hover-bg;
-        }
     }
 }
 
 .dashboard__content {
     @include make-sm-column(10);
+}
+
+
+// Interactive items
+.dashboard__tab__item {
+
+    &:hover,
+    &:focus {
+        text-decoration: none;
+        color: $dashboard-tab-hover-color;
+        background-color: $dashboard-tab-hover-bg;
+    }
+
+    // Active class on item itself, not parent
+    &.active,
+    &.active:hover,
+    &.active:focus {
+        z-index: 2; // Place active items above their siblings for proper border styling
+        color: $dashboard-tab-active-color;
+        background-color: $dashboard-tab-active-bg;
+    }
 }
