--- a/src/templates/dashboard/welcome_page.html
+++ b/src/templates/dashboard/welcome_page.html
@@ -2,6 +2,10 @@
 
 {% block title %}Dashboard{% endblock title %}
 
+{% block dashboard_tab %}
+{% include 'dashboard/_includes/tabs.html' with active='home' %}
+{% endblock dashboard_tab %}
+
 {% block dashboard_content %}
 	<p>Greetings</p>
 {% endblock dashboard_content %}
