--- a/src/templates/registration/password_change_form.html
+++ b/src/templates/registration/password_change_form.html
@@ -3,17 +3,19 @@
 {% load i18n crispy_forms_tags %}
 
 {% block content %}
-<h3 class="dashboard-header">
-	<span class="header-title">{% trans 'Change Log In Password' %}</span>
-</h3>
+<div class="col-md-offset-2 col-md-8">
+	<h3 class="dashboard-header">
+		<span class="header-title">{% trans 'Change Log In Password' %}</span>
+	</h3>
 
-<form action="{% url 'password_change' %}" method="post">
-	{% csrf_token %}
-	<div class="nesting-form-group">
-		{{ form|crispy }}
-		<button type="submit" class="btn btn-primary">
-			{% trans 'Submit' %}
-		</button>
-	</div>
-</form>
+	<form action="{% url 'password_change' %}" method="post">
+		{% csrf_token %}
+		<div class="nesting-form-group">
+			{{ form|crispy }}
+			<button type="submit" class="btn btn-primary">
+				{% trans 'Submit' %}
+			</button>
+		</div>
+	</form>
+</div>
 {% endblock content %}
