Fix website base title

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -15,7 +15,7 @@
 	{% endcompress css %}
 	{% block extra_css %}{% endblock extra_css %}
 	{% block titletag %}
-		<title>{% block title %}{% endblock %} | PyDoc AutoBuild</title>
+		<title>{% block title %}{% endblock %} | BioCloud</title>
 	{% endblock %}
 </head>
 <body>
