Prettier dashboard greeting page

--- a/src/templates/dashboard/welcome_page.html
+++ b/src/templates/dashboard/welcome_page.html
@@ -7,5 +7,5 @@
 {% endblock dashboard_tab %}
 
 {% block dashboard_content %}
-	<p>Greetings</p>
+	<h2>Greetings</h2>
 {% endblock dashboard_content %}
