--- a/src/templates/_includes/nav.html
+++ b/src/templates/_includes/nav.html
@@ -36,7 +36,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				{% if user.is_authenticated %}
 					<li class="{% if active == 'dashboard' %}active{% endif %}">
-						<a href="{% url 'user_dashboard' %}">Dashboard</a>
+						<a href="{% url 'dashboard_home' %}">Dashboard</a>
 					</li>
 					<form class="navbar-form navbar-right" action="{% url 'logout' %}" method="post">
 						{% csrf_token %}
