--- a/src/templates/dashboard/data_source_validation.html
+++ b/src/templates/dashboard/data_source_validation.html
@@ -10,20 +10,22 @@
 
 {% block dashboard_content %}
 	<h2>Data Sources</h2>
-	<table class="table table-striped">
-		<thead>
-		<tr>
-			<th>File Path</th>
-			<th>SHA256 Checksum</th>
-		</tr>
-		</thead>
-		<tbody>
-		{% for data_source in object_list %}
+	<div class="table-responsive">
+		<table class="table table-striped table-responsive">
+			<thead>
 			<tr>
-				<td>{{ data_source.file_path }}</td>
-				<td><code>{{ data_source.checksum }}</code></td>
+				<th>File Path</th>
+				<th>SHA256 Checksum</th>
 			</tr>
-		{% endfor %}
-		</tbody>
-	</table>
+			</thead>
+			<tbody>
+			{% for data_source in object_list %}
+				<tr>
+					<td>{{ data_source.file_path }}</td>
+					<td><code>{{ data_source.checksum }}</code></td>
+				</tr>
+			{% endfor %}
+			</tbody>
+		</table>
+	</div>
 {% endblock dashboard_content %}
