Include analyses app

--- a/src/templates/_includes/nav.html
+++ b/src/templates/_includes/nav.html
@@ -16,7 +16,9 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="navbar-dropdown">
 			<ul class="nav navbar-nav">
-				<li><a href="#">Link</a></li>
+				<li class="{% if active == 'new_analysis' %}active{% endif %}">
+					<a href="{% url 'new_analysis' %}">New Analysis</a>
+				</li>
 				<li><a href="#">Link</a></li>
 				<li class="dropdown">
 					<a role="button" href="#" class="dropdown-toggle"
