--- a/src/templates/analyses/new_analysis_by_type.html
+++ b/src/templates/analyses/new_analysis_by_type.html
@@ -2,8 +2,10 @@
 
 {% load crispy_forms_tags %}
 
+{% block title %}Create a New Analysis{% endblock %}
+
 {% block content %}
-	<h1>Create a new Analysis</h1>
+	<h1>Create a New Analysis</h1>
 	<p>
 		Start a new analysis by firstly choosing a desired analysis type.
 		You can find more information what each analysis type does
