--- a/src/templates/analyses/new_analysis_by_type.html
+++ b/src/templates/analyses/new_analysis_by_type.html
@@ -11,5 +11,23 @@
 		You can find more information what each analysis type does
 		<a href="#">here</a>.
 	</p>
-	{% crispy form %}
+	<div class="row">
+		{% for pipeline in available_pipelines %}
+			<div class="col-md-5">
+				<div class="panel panel-primary">
+					<div class="panel-heading">
+						<h3 class="panel-title">{{ pipeline.name }}</h3>
+					</div>
+					<div class="panel-body">
+						{{ pipeline.description }}
+					</div>
+					<div class="panel-footer">
+						<a class="btn btn-block btn-danger"
+							 href="{{ pipeline.url }}"
+							 role="button">Create a new {{ pipeline.name }} analysis</a>
+					</div>
+				</div>
+			</div>
+		{% endfor %}
+	</div><!-- /.row -->
 {% endblock %}
