--- a/src/templates/_includes/messages.html
+++ b/src/templates/_includes/messages.html
@@ -5,25 +5,41 @@
 		{{ message }}
 	</div>
 {% endfor %}
-{% if user.is_authenticated and not user.verified %}
-	<div class="alert alert-warning clearfix" role="alert">
-		<p>
-			{% blocktrans trimmed %}
-				Please verify your account by clicking the link in the mail we sent to
-				your email inbox.
-			{%  endblocktrans %}
-		</p>
-		<form method="post" action="{% url 'request_verification' %}"
-			  class="form form-inline">
-			{% csrf_token %}
+{% if user.is_authenticated %}
+	{% if not user.verified %}
+		<div class="alert alert-warning clearfix" role="alert">
 			<p>
+				{% blocktrans trimmed %}
+					Please verify your account by clicking the link in the mail we sent to
+					your email inbox.
+				{%  endblocktrans %}
+			</p>
+			<form method="post" action="{% url 'request_verification' %}"
+				  class="form form-inline">
+				{% csrf_token %}
+				<p>
 			<span class="form-tip">
 				{% trans 'Did not get the verification mail?' %}
 			</span>
-				<button type="submit" class="btn btn-link">
-					{% trans 'Request a new one.' %}
-				</button>
+					<button type="submit" class="btn btn-link">
+						{% trans 'Request a new one.' %}
+					</button>
+				</p>
+			</form>
+		</div>
+	{% endif %}
+	{% if not user.data_sources.exists %}
+		<div class="alert alert-warning clearfix" role="alert">
+			<p>
+				{% url 'dashboard_data_sources' as dashboard_datasrc_url %}
+				{% blocktrans trimmed %}
+					You have not attached any data source yet. Please go to
+					Dashboard tab
+					<a href="{{ dashboard_datasrc_url }}">Data Sources</a>
+					to scan your data source directory.
+				{% endblocktrans %}
 			</p>
-		</form>
-	</div>
+		</div>
+	{% endif %}
 {% endif %}
+
