--- a/src/templates/dashboard/_includes/tabs.html
+++ b/src/templates/dashboard/_includes/tabs.html
@@ -2,6 +2,6 @@
 	class="dashboard__tab__item {% if active == 'home' %}active{% endif %}">Home</a>
 <a href="{% url 'dashboard_profile' %}"
 	class="dashboard__tab__item {% if active == 'profile' %}active{% endif %}">Profile Update</a>
-<a href="{% url 'dashboard_data_sources' %}"
+<a href="{% url 'data_sources' %}"
 	 class="dashboard__tab__item {% if active == 'data_sources' %}active{% endif %}">Data Sources</a>
 <a href="#" class="dashboard__tab__item">D</a>
