--- a/src/templates/data_sources/list.html
+++ b/src/templates/data_sources/list.html
@@ -1,15 +1,11 @@
-{% extends 'dashboard/base.html' %}
+{% extends 'data_sources/base.html' %}
 
 {% load crispy_forms_tags %}
 
-{% block tab_title %}Data Sources Validation{% endblock tab_title %}
+{% block title %}Data Sources{% endblock title %}
 
-{% block dashboard_tab %}
-	{% include 'dashboard/_includes/tabs.html' with active='data_sources' %}
-{% endblock dashboard_tab %}
-
-{% block dashboard_content %}
-	<h2>Data Sources</h2>
+{% block content %}
+	<h2>Data Sources for {{ user.name }} (<code>{{ user.email }}</code>)</h2>
 	<p>To add more data sources, put more files under the folder</p>
 	<pre>{{ user_data_source_dir.as_posix }}/</pre>
 	<p>and <a href="{% url 'discover_data_sources' %}">click here</a>
@@ -36,4 +32,4 @@
 			</tbody>
 		</table>
 	</div>
-{% endblock dashboard_content %}
+{% endblock content %}
