--- a/src/templates/_includes/nav.html
+++ b/src/templates/_includes/nav.html
@@ -21,21 +21,19 @@
 				<li class="{% if active == 'new_analysis' %}active{% endif %}">
 					<a href="{% url 'new_analysis' %}">New Analysis</a>
 				</li>
-				{% endif %}
-				<li><a href="#">Link</a></li>
-				<li class="dropdown">
+				<li class="dropdown {% if active == 'data_sources' %}active{% endif %}"">
 					<a role="button" href="#" class="dropdown-toggle"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown <span class="caret"></span>
-                    </a>
+					   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						Data Sources<span class="caret"></span>
+					</a>
 					<ul class="dropdown-menu">
-						<li><a href="#">Action</a></li>
-						<li><a href="#">Another action</a></li>
-						<li><a href="#">Something else here</a></li>
+						<li><a href="{% url 'list_data_sources' %}">List all</a></li>
+						<li><a href="{% url 'discover_data_sources' %}">Discover</a></li>
 						<li role="separator" class="divider"></li>
 						<li><a href="#">Separated link</a></li>
 					</ul>
-				</li>
+				</li><!-- /.dropdown -->
+				{% endif %}
 			</ul>
 			<!-- Right Navbar -->
 			<ul class="nav navbar-nav navbar-right">
