Highlight error in table inline formset

--- a/src/static/css/site.scss
+++ b/src/static/css/site.scss
@@ -26,9 +26,11 @@
 // Import site-wide mixins
 // @import "mixins";
 
-
 // Import pages
 @import "pages/dashboard";
+@import "pages/data_sources";
+
+
 
 // Navbar
 .navbar-form {
