--- a/src/templates/_includes/nav.html
+++ b/src/templates/_includes/nav.html
@@ -21,6 +21,16 @@
 					<li class="{% if active == 'new_analysis' %}active{% endif %}">
 						<a href="{% url 'new_analysis' %}">New Analysis</a>
 					</li>
+					<!-- Menu for experiments -->
+					<li class="dropdown {% if active == 'experiments' %}active{% endif %}"">
+						<a role="button" href="#" class="dropdown-toggle"
+						   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Experiments<span class="caret"></span>
+						</a>
+						<ul class="dropdown-menu">
+							<li><a href="{% url 'new_experiment' %}">New</a></li>
+						</ul>
+					</li><!-- /.dropdown -->
 					<!-- Menu for data sources -->
 					<li class="dropdown {% if active == 'data_sources' %}active{% endif %}"">
 						<a role="button" href="#" class="dropdown-toggle"
