Fix navbar not working due to the lower z-index.
Set z-index of markdown editor in fullscreen higher than that of
the nabber (1000).

--- a/src/static/css/tools/simplemde-setup.css
+++ b/src/static/css/tools/simplemde-setup.css
@@ -1,3 +1,8 @@
 .CodeMirror-scroll {
     font-family: monospace;
 }
+
+.editor-toolbar.fullscreen {
+    /* navbar-static has z-index 1000 */
+    z-index: 1001;
+}
