--- a/src/templates/experiments/new.html
+++ b/src/templates/experiments/new.html
@@ -114,7 +114,7 @@
 				'data_source_pk': "3",
 				'file_path': "another_R1.fastq",
 				'file_type': "FASTQ",
-				'sample': "",
+				'sample': "another",
 				'metadata': {},
 				"condition": undefined,
 				"selected": false,
@@ -123,7 +123,25 @@
 				'data_source_pk': "4",
 				'file_path': "another_R2.fastq",
 				'file_type': "FASTQ",
-				'sample': "",
+				'sample': "another",
+				'metadata': {},
+				"condition": undefined,
+				"selected": false,
+			},
+            			{
+				'data_source_pk': "5",
+				'file_path': "yet_another_R1.fastq",
+				'file_type': "FASTQ",
+				'sample': "yet_another",
+				'metadata': {},
+				"condition": undefined,
+				"selected": false,
+			},
+			{
+				'data_source_pk': "6",
+				'file_path': "yet_another_R2.fastq",
+				'file_type': "FASTQ",
+				'sample': "yet_another",
 				'metadata': {},
 				"condition": undefined,
 				"selected": false,
