Reactively select conditions, samples, and sample's condition
\ Praise the full Vue.js magic /

--- a/src/templates/experiments/new.html
+++ b/src/templates/experiments/new.html
@@ -13,62 +13,100 @@
 	<h2>New experiement</h2>
 	{% crispy form %}
 	<div id="app">
-		<h3>Conditions</h3>
+		<h2>Conditions</h2>
 		<div v-show="editable">
 			<button v-on:click="leaveEditMode()" class="btn btn-danger">Leave Edit Mode</button>
-			<ul class="list-unstyled">
+			<ol>
 				<li v-for="(index, condition) in conditions" track-by="_uid">
 					<input type="text" v-model="condition.label">
 					<button v-on:click="removeCondition(index, $event)" class="btn btn-xs btn-danger">Remove</button>
 				</li>
-				<li>
+				<li class="list-unstyled">
 					<button v-on:click="addCondition()" class="btn btn-default">Add Condition</button>
 				</li>
-			</ul>
+			</ol>
 		</div>
 		<div v-show="!editable">
-			<button v-on:click="enterEditMode()" class="btn btn-success">Enter Edit Mode</button>
-			<ul class="list-unstyled">
-				<li v-for="(index, condition) in conditions" track-by="_uid">
-					{% verbatim %}{{ condition.label }}{% endverbatim %}
-				</li>
-			</ul>
+			<button v-on:click="enterEditMode()" class="btn btn-success">Edit Condition</button>
+			{% verbatim %}
+			<ol class="list-inline">
+				<li v-for="(index, condition) in conditions" track-by="_uid">{{ index + 1 }}. {{ condition.label }}</li>
+			</ol>
+			{% endverbatim %}
 		</div>
 
-		<h3>Choose Sources</h3>
-		<input type="text" v-model="sourceFilter">
-		<button v-on:click="alterFilteredSourcesSelectedStatus(true)" class="btn btn-default">Select all</button>
-		<button v-on:click="alterFilteredSourcesSelectedStatus(false)" class="btn btn-default">Unselect all</button>
-		<ul>
-			<li v-for="source in filteredDataSources ">
-				<input type="checkbox" v-model="source.selected">
-				{% verbatim %}{{ source.file_path }}{% endverbatim %}
-			</li>
-		</ul>
-		<h3>Selected Sources</h3>
+		<h2>Group Sources as Samples</h2>
+		<button v-on:click="updateFilteredSourcesSelectedStatus(true)" class="btn btn-default">Select all</button>
+		<button v-on:click="updateFilteredSourcesSelectedStatus(false)" class="btn btn-default">Unselect all</button>
+		<button v-on:click="clearAllFilters" class="btn btn-default">Clear all filters</button>
 		<table class="table table-striped">
 			<thead>
 			<tr>
-				<th>Sample</th>
+				<th></th>
 				<th>File path</th>
 				<th>File type</th>
+				<th>Sample</th>
 				<th>Strand</th>
-				<th>Condition</th>
+			</tr>
+			<tr>
+				<td></td>
+				<td><input type="text" v-model="sourceFilter.filePath" debounce="300"></td>
+				<td><input type="text" v-model="sourceFilter.fileType" debounce="300"></td>
+				<td><input type="text" v-model="sourceFilter.sample" debounce="300"></td>
+				<td></td>
 			</tr>
 			</thead>
 			<tbody>
 			{% verbatim %}
-			<tr v-for="(index, source) in selectedDataSources" track-by="data_source_pk">
-				<td><input type="text" v-model="source.sample"></td>
+			<tr v-for="(index, source) in filteredDataSources" track-by="data_source_pk">
+				<td><input type="checkbox" v-model="source.selected"></td>
 				<td>{{ source.file_path }}</td>
 				<td>{{ source.file_type }}</td>
+				<td><input type="text" v-model="source.sample"></td>
 				<td><input type="text" v-model="source.metadata.strand"></td>
+			</tr>
+			{% endverbatim %}
+			</tbody>
+		</table>
+		<p>
+			Rename filtered sources' sample name to
+			<input type="text"
+						 v-model="newSampleName"
+						 v-on:keyup.Enter="renameFilteredSourcesName"
+						 v-bind="{disabled: !canRenameSample}">
+			<button v-on:click="renameFilteredSourcesName"
+							class="btn btn-default btn-sm"
+							v-bind="{disabled: !canRenameSample}"
+			>Rename</button>
+		</p>
+
+
+		<h2>Group Samples as Conditions</h2>
+		<table class="table table-striped">
+			<thead>
+			<tr>
+				<th>Sample</th>
+				<th>Condition</th>
+				<th>Included files</th>
+			</tr>
+			</thead>
+			<tbody>
+			{% verbatim %}
+			<tr v-for="(index, sourcesBySample) in dataSourcesBySample" track-by="sample">
+				<td>{{ sourcesBySample.sample }}</td>
 				<td>
-					<select v-model="source.condition">
+					<select
+							v-model="sourcesBySample.condition"
+							v-on:change="updateSourceCondition(sourcesBySample.sample, sourcesBySample.condition)"
+					>
 						<option v-for="condition in conditions" v-bind:value="condition._uid">
 							{{ condition.label }}
 						</option>
 					</select>
+				</td>
+				<td>
+					<span v-for="file in sourcesBySample.files" class="source-label">{{
+						file.label }}</span>
 				</td>
 			</tr>
 			{% endverbatim %}
